--- a/src/TheWorld/bower.json
+++ b/src/TheWorld/bower.json
@@ -8,7 +8,8 @@
     "jquery-validation-unobtrusive": "~3.2.6",
     "bootstrap": "~3.3.7",
     "font-awesome": "~4.6.3",
-    "bootswatch": "~3.3.7"
+    "bootswatch": "~3.3.7",
+     "angular": "~1.5.8"
 
   }
 }
