--- a/src/TheWorld/project.json
+++ b/src/TheWorld/project.json
@@ -62,6 +62,7 @@
   },
 
   "scripts": {
-    "postpublish": [ "dotnet publish-iis --publish-folder %publish:OutputPath% --framework %publish:FullTargetFramework%" ]
+    "prePublish": [ "npm install", "bower install" ],
+    "prepare": "gulp minify"    
   }
 }
